--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0"
+        "livewire/volt": "^1.0",
+        "nette/schema": "^1.3",      
+        "nette/utils": "^4.0",     
+        "league/config": "^1.2"     
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
