--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,13 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2.4",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.9",
+        
+            "php": "^8.2",
+            "laravel/framework": "^12.0",
+            "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.4",
-        "livewire/volt": "^1.0",
-        "nette/schema": "^1.3",      
-        "nette/utils": "^4.0",     
-        "league/config": "^1.2"     
+        "livewire/volt": "^1.0"
+      
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
